--- a/app/src/main/res/layout/addpet_frag.xml
+++ b/app/src/main/res/layout/addpet_frag.xml
@@ -28,7 +28,7 @@
         android:paddingTop="@dimen/activity_vertical_margin">
 
         <EditText
-            android:id="@+id/add_task_title"
+            android:id="@+id/add_pet_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/title_hint"
@@ -36,11 +36,11 @@
             android:textAppearance="@style/TextAppearance.AppCompat.Title" />
 
         <EditText
-            android:id="@+id/add_task_description"
+            android:id="@+id/add_pet_description"
             android:layout_width="match_parent"
             android:layout_height="350dp"
             android:gravity="top"
-            android:hint="@string/task_description_hint" />
+            android:hint="@string/pet_description_hint" />
 
     </LinearLayout>
 </ScrollView>
