--- a/app/src/main/res/layout/pets_frag.xml
+++ b/app/src/main/res/layout/pets_frag.xml
@@ -20,14 +20,14 @@
     android:layout_height="match_parent">
 
     <RelativeLayout
-        android:id="@+id/tasksContainer"
+        android:id="@+id/petsContainer"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:clickable="true"
         android:orientation="vertical">
 
         <LinearLayout
-            android:id="@+id/tasksLL"
+            android:id="@+id/petsLL"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
@@ -44,41 +44,41 @@
                 android:layout_marginBottom="@dimen/activity_vertical_margin" />
 
             <ListView
-                android:id="@+id/tasks_list"
+                android:id="@+id/pets_list"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
         </LinearLayout>
 
         <LinearLayout
-            android:id="@+id/noTasks"
+            android:id="@+id/noPets"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:orientation="vertical">
 
             <ImageView
-                android:id="@+id/noTasksIcon"
+                android:id="@+id/noPetsIcon"
                 android:layout_width="48dp"
                 android:layout_height="48dp"
                 android:layout_gravity="center"
                 android:src="@drawable/ic_assignment_turned_in_24dp" />
 
             <TextView
-                android:id="@+id/noTasksMain"
+                android:id="@+id/noPetsMain"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:text="@string/no_tasks_all"
+                android:text="@string/no_pets_all"
                 android:layout_marginBottom="@dimen/list_item_padding" />
 
             <TextView
-                android:id="@+id/noTasksAdd"
+                android:id="@+id/noPetsAdd"
                 android:layout_width="wrap_content"
                 android:layout_height="48dp"
                 android:layout_gravity="center"
                 android:background="@drawable/touch_feedback"
                 android:gravity="center"
-                android:text="@string/no_tasks_add" />
+                android:text="@string/no_pets_add" />
 
         </LinearLayout>
     </RelativeLayout>
