--- a/app/src/main/res/layout/petdetail_frag.xml
+++ b/app/src/main/res/layout/petdetail_frag.xml
@@ -23,27 +23,26 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin">
 
-    <CheckBox
-        android:id="@+id/pet_detail_complete"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical"
-        android:layout_marginRight="@dimen/activity_horizontal_margin" />
-
-    <TextView
-        android:id="@+id/pet_detail_title"
-        android:layout_toRightOf="@id/pet_detail_complete"
+    <LinearLayout
+        android:id="@+id/pet_detail_ll"
+        android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textAppearance="@style/TextAppearance.AppCompat.Title" />
+        android:layout_height="wrap_content">
 
-    <TextView
-        android:id="@+id/pet_detail_description"
-        android:layout_toRightOf="@id/pet_detail_complete"
-        android:layout_below="@id/pet_detail_title"
+        <TextView
+            android:id="@+id/pet_detail_description"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Medium Text"
+            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
+
+    </LinearLayout>
+
+    <com.google.android.gms.maps.MapView
+        android:id="@+id/mapView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Medium Text"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
+        android:layout_height="match_parent"
+        android:layout_below="@+id/pet_detail_ll"
+        android:layout_alignParentBottom="true" />
 
 </RelativeLayout>
