Added colors, adding itens

--- a/app/src/main/res/layout/pets_frag.xml
+++ b/app/src/main/res/layout/pets_frag.xml
@@ -17,6 +17,7 @@
 <com.hackjunction.petra.components.ScrollChildSwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/refresh_layout"
     android:layout_width="match_parent"
+    android:background="#ffffff"
     android:layout_height="match_parent">
 
     <RelativeLayout
@@ -61,7 +62,7 @@
                 android:layout_width="48dp"
                 android:layout_height="48dp"
                 android:layout_gravity="center"
-                android:src="@drawable/ic_assignment_turned_in_24dp" />
+                android:src="@mipmap/ic_launcher" />
 
             <TextView
                 android:id="@+id/noPetsMain"
