map draw region action

--- a/app/src/main/res/menu/petdetail_fragment_menu.xml
+++ b/app/src/main/res/menu/petdetail_fragment_menu.xml
@@ -16,6 +16,11 @@
 
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+
+    <item
+        android:id="@+id/menu_edit"
+        android:title="@string/menu_edit_pet"
+        app:showAsAction="ifRoom|withText" />
     <item
         android:id="@+id/menu_delete"
         android:title="@string/menu_delete_pet"
