--- a/app/src/main/res/layout/listitem_scanresult.xml
+++ b/app/src/main/res/layout/listitem_scanresult.xml
@@ -16,27 +16,35 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    >
+    android:background="@drawable/touch_feedback">
 
-<LinearLayout
-              android:orientation="vertical"
-              android:layout_width="match_parent"
-              android:layout_height="wrap_content"
-              android:paddingTop="20dp"
-            android:paddingLeft="100dp"
-            android:paddingRight="100dp">
-    <TextView android:id="@+id/device_name"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textSize="16dp"/>
+    <ImageView
+        android:layout_width="45dp"
+        android:layout_height="45dp"
+        android:layout_marginStart="10dp"
+        android:layout_centerVertical="true"
+        android:src="@drawable/ic_bluetooth_connected_black_24dp" />
 
-    <TextView android:id="@+id/device_address"
+    <LinearLayout
+                  android:orientation="vertical"
+                  android:layout_width="match_parent"
+                  android:layout_height="wrap_content"
+                  android:paddingTop="10dp"
+                  android:paddingBottom="10dp"
+                android:paddingLeft="100dp"
+                android:paddingRight="100dp">
+        <TextView android:id="@+id/device_name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="16dp"/>
+
+        <TextView android:id="@+id/device_address"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="12dp"/>
+        <TextView android:id="@+id/last_seen"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="12dp"/>
-    <TextView android:id="@+id/last_seen"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="12dp"/>
-</LinearLayout>
+    </LinearLayout>
 </RelativeLayout>
