--- a/app/src/main/res/layout/pet_item.xml
+++ b/app/src/main/res/layout/pet_item.xml
@@ -24,11 +24,11 @@
     android:paddingBottom="@dimen/list_item_padding"
     android:paddingTop="@dimen/list_item_padding">
 
-    <CheckBox
-        android:id="@+id/complete"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical" />
+    <ImageView
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:layout_gravity="center"
+        android:src="@drawable/no_data" />
 
     <TextView
         android:id="@+id/name"
