--- a/app/src/main/res/layout/pets_act.xml
+++ b/app/src/main/res/layout/pets_act.xml
@@ -26,6 +26,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:backgroundTint="#ffffff"
         android:orientation="vertical">
 
         <android.support.design.widget.AppBarLayout
